[project]
name = "hyper-models"
version = "0.1.0"
description = "A model zoo for non-Euclidean embedding models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "onnxruntime",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyper_models"]

[tool.ruff]
line-length = 100
